# tree-box-proximity-filter

./: .gitignore  CMakeLists.txt  README.md
src/: batch_overlap.cpp  batch_overlap.h  bbox.cpp  bbox.h  cache_bbox.cpp  cache_bbox.h  crop_minus1.cpp  crop_minus1.h  grid_index.cpp  grid_index.h  main.cpp  ply_bbox_reader.cpp  ply_bbox_reader.h  read_parallel.cpp  read_parallel.h  timer.h
